--- a/src/notebook_gallery/components/Sidebar.css
+++ b/src/notebook_gallery/components/Sidebar.css
@@ -1,5 +1,5 @@
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
-  background-image: url("https://i.ibb.co/znH0FBh/Pattern2bun-Blurat.jpg");
+  background-image: url("https://i.ibb.co/fStGr21/wowpatterns-export-1.png");
   margin-top: 80px;
   width: 330px;
   /* position: fixed; */
